# let_it_ride

./: .gitignore  README.md  one_player.ipynb  pyproject.toml
src/: main.py  score_hand.py
test/: example_test.py  score_test.py  simulate_games_test.py
