[project]
name = "poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
packages = [{include = "src"}]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]