[project]
name = "poker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
]
packages = [{include = "src"}]

[dependency-groups]
dev = [
    "hypothesis>=6.136.4",
    "pytest>=8.4.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
